# mff-extract

./: Cargo.toml  README.md  build.rs
src/: display.rs  extract.rs  list.rs  main.rs
test_data/: list.txt
