[package]
name = "mff-extract"
version = "0.1.0"
edition = "2021"
authors = ["xNyaDev <xnyadev@pm.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/xNyaDev/mff-extract/"
homepage = "https://github.com/xNyaDev/mff-extract/"
description = "CLI utility to extract PAK archives from Macrospace's Fatal Force J2ME game"
exclude = [
    ".idea/*",
    "test_data/*",
]

[dependencies]
binrw = "0.11.1"
clap = { version = "4.2.7", features = ["derive"] }
indicatif = "0.17.3"
number_prefix = "0.4.0"
tabled = "0.12.0"

[dev-dependencies]
pretty_assertions = "1.3.0"

[build-dependencies]
tauri-winres = "0.1.1"

[package.metadata.tauri-winres]
OriginalFilename = "mff-extract.exe"
FileDescription = "mff-extract.exe"
LegalCopyright = "Licensed under MIT or Apache-2.0, xNyaDev 2023"